# docs/swagger.yaml
@@ -29,6 +29,14 @@ definitions:
         description: 更新时间
         type: string
     type: object
+  model.HomeDeleteRequest:
+    properties:
+      id:
+        description: 首页内容ID
+        type: integer
+    required:
+    - id
+    type: object
   model.HomeListDataResponse:
     properties:
       list:
@@ -46,6 +54,9 @@ definitions:
         description: 描述
         maxLength: 500
         type: string
+      id:
+        description: 首页内容ID
+        type: integer
       image_url:
         description: 图片URL
         maxLength: 500
@@ -68,6 +79,8 @@ definitions:
         description: 标题
         maxLength: 200
         type: string
+    required:
+    - id
     type: object
   model.LoginDataResponse:
     properties:
@@ -169,45 +182,6 @@ info:
   title: Hi-Go API 文档
   version: "1.0"
 paths:
-  /home/{id}:
-    post:
-      consumes:
-      - application/json
-      description: 根据ID更新首页内容信息
-      parameters:
-      - description: 首页内容ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 更新请求参数
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/model.HomeUpdateRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 更新成功
-          schema:
-            $ref: '#/definitions/model.Response'
-        "400":
-          description: 参数错误
-          schema:
-            $ref: '#/definitions/model.Response'
-        "404":
-          description: 记录不存在
-          schema:
-            $ref: '#/definitions/model.Response'
-        "500":
-          description: 服务器错误
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: 更新首页内容
-      tags:
-      - 首页模块
   /home/create:
     post:
       consumes:
@@ -225,6 +199,40 @@ paths:
           schema:
             $ref: '#/definitions/model.Response'
       summary: 创建模拟首页数据
+      tags:
+      - 首页模块
+  /home/delete:
+    delete:
+      consumes:
+      - application/json
+      description: 根据ID删除首页内容信息
+      parameters:
+      - description: 删除请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.HomeDeleteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除成功
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: 参数错误
+          schema:
+            $ref: '#/definitions/model.Response'
+        "404":
+          description: 记录不存在
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: 删除首页内容
       tags:
       - 首页模块
   /home/list:
@@ -262,6 +270,86 @@ paths:
           schema:
             $ref: '#/definitions/model.Response'
       summary: 获取首页内容列表
+      tags:
+      - 首页模块
+  /home/search:
+    get:
+      consumes:
+      - application/json
+      description: 根据关键词搜索首页标题或描述
+      parameters:
+      - description: 搜索关键词
+        in: query
+        name: keyword
+        type: string
+      - description: 页码（默认1）
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量（默认20，最大100）
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 搜索成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.HomeListDataResponse'
+              type: object
+        "400":
+          description: 参数错误
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: 搜索首页内容
+      tags:
+      - 首页模块
+  /home/update:
+    post:
+      consumes:
+      - application/json
+      description: 根据ID更新首页内容信息
+      parameters:
+      - description: 首页内容ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 更新请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.HomeUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 更新成功
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: 参数错误
+          schema:
+            $ref: '#/definitions/model.Response'
+        "404":
+          description: 记录不存在
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: 更新首页内容
       tags:
       - 首页模块
   /user/login:
